@@ -59,11 +59,11 @@ class CollectionDB : public QObject
         void scanModifiedDirs( bool recursively );
         void scan( const QStringList& folders, bool recursively );
       
-        void retrieveFirstLevel( QString category, QString filter, QStringList* const values, QStringList* const names );
+        void retrieveFirstLevel( QString category1, QString category2, QString filter, QStringList* const values, QStringList* const names );
         void retrieveSecondLevel( QString itemText, QString category1, QString category2, QString filter, QStringList* const values, QStringList* const names );
         void retrieveThirdLevel( QString itemText1, QString itemText2, QString category1, QString category2, QString filter, QStringList* const values, QStringList* const names );
 
-        void retrieveFirstLevelURLs( QString itemText, QString category, QString filter, QStringList* const values, QStringList* const names );
+        void retrieveFirstLevelURLs( QString itemText, QString category1, QString category2, QString filter, QStringList* const values, QStringList* const names );
         void retrieveSecondLevelURLs( QString itemText1, QString itemText2, QString category1, QString category2, QString filter, QStringList* const values, QStringList* const names );
 
     signals:
